sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:13: error: 'while' expected but 'var' found.
    var i=0
    ^AlgCombSort11:14: error: '(' expected but ';' found.
    while (i+ecart<getNombreValeurs()){
^AlgCombSort11:21: error: ';' expected but 'while' found.
  } while ((ecart>1)||(a))
    ^AlgCombSort11:25: error: Unmatched closing brace '}' ignored here
}
^